# ocfl-cli-rust

./: .gitignore  Cargo.toml  README.md
src/: main.rs
tests/: catr.rs  cli.rs  echo.rs  exit.rs  findr.rs  headr.rs  wcr.rs
tests/headr/expected/: all.c1.out  all.c2.out  all.c4.out  all.n2.out  all.n4.out  all.out
