[package]
name = "ocfl-cli-rust"
version = "0.1.0"
edition = "2024"
default-run = "ocfl-cli-rust"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
ocfl-lib-rust = { path = "../ocfl-lib-rust" }
regex = "1.11.2"
rocfl = { git = "https://github.com/mlibrary/rocfl.git", branch = "umich" }
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
pretty_assertions = "1.4.1"
rand = "0.9.2"
